<resources>
    <string name="app_name">Memory</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="memory_doing">Memory</string>
    <string name="memory_archive">Archived Memory</string>
    <string name="memory_recycle">Recycling station</string>
    <string name="drawer_break_title">Other</string>
    <string name="user_center">User</string>
    <string name="about_us">About us</string>

    <string name="title_memory_doing">Memory</string>
    <string name="title_memory_archive">Archived Memory</string>
    <string name="title_memory_recycle">Recycling station</string>
    <string name="title_create_memory">Create</string>

    <string name="card_button_review">revise</string>
    <string name="card_button_setting">setting</string>

    <string name="done">Done</string>
    <string name="app_intro_done_button">Done</string>
    <string name="app_intro_skip_button">Skip</string>

</resources>
